# st-credit-risk

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
src/st_credit_risk/: app.py  utils.py
