[tool.poetry]
name = "st-credit-risk"
version = "0.2.0"
description = "Credit risk data visualized using Streamlit"
authors = ["Nico Munting <nico.munting@muntech.nl>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2"
pandas = "^2.2.2"
streamlit = "^1.35.0"
plotly = "^5.22.0"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
